--- a/style.css
+++ b/style.css
@@ -47,3 +47,36 @@ body{
     border: none;
     
 }
+
+.newBtn{
+    padding: 1rem;
+    background-color: #151416;
+    color: aliceblue;
+    border-radius: 1rem;
+    font-size: 1.5rem;
+    border: none;
+
+}
+
+.msg-container{
+    height: 100vmin;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+
+.msg{
+    color: rgb(11, 13, 15);
+    font-size: 3vmin;
+}
+
+.heading{
+    margin-top: 2vmin;
+}
+
+.hide{
+    display: none;
+}
